# job-tracker-rs

./: Cargo.toml  README.md
.sqlx/: query-d49c0efd3d188c623559f208d8ee9d13df5b144770104321d7a95c16b4672c3d.json
migrations/: 001_create_tasks.sql
src/: lib.rs  main.rs
src/calendar/: calendar.rs  mod.rs
src/handlers/: mod.rs  task_handlers.rs
src/models/: job.rs  task.rs
src/services/: mod.rs  task_service.rs
static/: app.js  index.html  style.css
